test/Error/Purity/CannotPurifyWrite/Main.ds

-- Cannot purify write effects.
x
 = do 	a	= 5
	(:=)@ a 27
	
 	


